crates/scribe2/tests/e2e/snapshots/e2e__headless__headless_external_form.snap
---
source: crates/scribe2/tests/e2e/headless.rs
expression: form
---
usage: scribe2 runner --worktree D --write-set F --vessel F --plugin-dir D --permission-mode M [--rules PATH] [--account-dir D] [--claude PATH] [--cgroup-root DIR] < contract
usage: scribe2 lens --contract F --worktree D --permission-mode M [--rules PATH] [--account-dir D] [--claude PATH] [--cgroup-root DIR] < diff
runner: --worktree が要る
usage: scribe2 runner --worktree D --write-set F --vessel F --plugin-dir D --permission-mode M [--rules PATH] [--account-dir D] [--claude PATH] [--cgroup-root DIR] < contract
lens: --contract が要る
usage: scribe2 lens --contract F --worktree D --permission-mode M [--rules PATH] [--account-dir D] [--claude PATH] [--cgroup-root DIR] < diff
